DROP DATABASE IF EXISTS social_media;
CREATE DATABASE social_media;
USE social_media;

DROP TABLE IF EXISTS USER;
CREATE TABLE USER (
    user_id INT NOT NULL AUTO_INCREMENT primary key,
    password varchar(120) NOT NULL,
    name varchar(50) NOT NULL,
    email varchar(20) NOT NULL,
    contact_address varchar(300) NOT NULL,
    phone int,
    uptime TIME not null
) ENGINE = InnoDB DEFAULT CHARSET = utf8;

insert into USER VALUES(NULL, 'sdfsfs', 'NMAE',  'pb@afsd.com', 'voldem', 1231231, '12:12:21');

DROP TABLE IF EXISTS POST;
CREATE TABLE POST (
    post_id int not null AUTO_INCREMENT,
    time TIMESTAMP not null,
    text TEXT,
    media varchar(10000),
    PRIMARY KEY(post_id),
    user_id int not null,
    CONSTRAINT OWNS_POST FOREIGN KEY (user_id) REFERENCES USER (user_id) on DELETE CASCADE on UPDATE CASCADE,
    CONSTRAINT CONTENT_PRESENT_IN_POST CHECK (text is NOT NULL OR media is NOT NULL)
) ENGINE = InnoDB DEFAULT CHARSET = utf8;


DROP TABLE IF EXISTS COMMENT;
CREATE TABLE COMMENT(
    comment_id int not null AUTO_INCREMENT PRIMARY KEY,
    time TIMESTAMP not NULL,
    text TEXT,
    media VARCHAR(10000),
    CONSTRAINT CONTENT_PRESENT_IN_COMMENT CHECK (text is NOT NULL OR media is NOT NULL)
) ENGINE = InnoDB DEFAULT CHARSET = utf8;

DROP TABLE IF EXISTS STORIES;
CREATE TABLE STORIES(
    story_id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
    time TIMESTAMP,
    text TEXT,
    media VARCHAR(10000),
    user_id int not null,
    CONSTRAINT OWNS_STORY FOREIGN KEY (user_id) REFERENCES USER (user_id) on DELETE CASCADE on UPDATE CASCADE,
    CONSTRAINT CONTENT_PRESENT_IN_STORY CHECK (text is NOT NULL OR media is NOT NULL)
) ENGINE = InnoDB DEFAULT CHARSET = utf8;



DROP TABLE IF EXISTS MESSAGE;
CREATE TABLE MESSAGE(
    message_id int not null PRIMARY KEY AUTO_INCREMENT,
    text TEXT not null
) ENGINE = InnoDB DEFAULT CHARSET = utf8;

DROP TABLE IF EXISTS PROFILE;
CREATE TABLE PROFILE (
    user_id int PRIMARY KEY,
    date_of_birth DATE not null,
    sex varchar(30),
    sexes ENUM('Male', 'Female', 'Others', 'PreferNotToSay'),
    CONSTRAINT OWNS_PROFILE FOREIGN KEY (user_id) REFERENCES USER (user_id) on DELETE CASCADE on UPDATE CASCADE
) ENGINE = InnoDB DEFAULT CHARSET = utf8;

DROP TABLE IF EXISTS EDUCATION;
CREATE TABLE EDUCATION (
    user_id INT,
    education VARCHAR(100),
    PRIMARY KEY (user_id, education),
    FOREIGN KEY (user_id) REFERENCES PROFILE(user_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS PAGE;
CREATE TABLE PAGE (
    page_id int AUTO_INCREMENT NOT NULL PRIMARY KEY,
    page_name varchar(100) NOT NULL,
    owner_id int,
    FOREIGN KEY (owner_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS BUSINESS_PLACE;
CREATE TABLE BUSINESS_PLACE (
    page_id int PRIMARY KEY,
    owner_name varchar(100) NOT NULL,
    location varchar(100),
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS PROD_BP;
CREATE TABLE PROD_BP(
    page_id int,
    name varchar(50),
    price decimal(10,2),
    FOREIGN KEY (page_id) REFERENCES BUSINESS_PLACE(page_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(page_id,name,price)
);

DROP TABLE IF EXISTS COMPANY;
CREATE TABLE COMPANY (
    page_id int PRIMARY KEY,
    work_domain varchar(30),
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS BRANCH_COMPANY;
CREATE TABLE BRANCH_COMPANY (
    page_id int,
    branch varchar(50),
    FOREIGN KEY (page_id) REFERENCES COMPANY(page_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY (page_id, branch)
);

DROP TABLE IF EXISTS BRAND_PRODUCT;
CREATE TABLE BRAND_PRODUCT (
    page_id int PRIMARY KEY,
    website varchar(50),
    cust_service int(10),
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS PUBLIC_FIGURE;
CREATE TABLE PUBLIC_FIGURE (
    page_id int PRIMARY KEY,
    name varchar(50),
    field varchar(50),
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS NEWS_PUB_FIG;
CREATE TABLE NEWS_PUB_FIG (
    page_id int ,
    news varchar(1000),
    published_time timestamp,
    FOREIGN KEY (page_id) REFERENCES PUBLIC_FIGURE(page_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY (page_id,published_time)
);

DROP TABLE IF EXISTS ENTERTAINMENT;
CREATE TABLE ENTERTAINMENT  (
    page_id int PRIMARY KEY,
    events varchar(300),
    audience varchar(300),
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS CAUSE_COMMUNITY;
CREATE TABLE CAUSE_COMMUNITY  (
    page_id int PRIMARY KEY,
    goal varchar(300),
    activities varchar(300),
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS social_media.GROUP;
CREATE TABLE social_media.GROUP (
    group_id int AUTO_INCREMENT PRIMARY KEY,
    group_name varchar(50) NOT NULL,
    group_privacy ENUM('Public', 'Private', 'Secret')
);
-- relationships

DROP TABLE IF EXISTS COMMENTS;
CREATE TABLE COMMENTS (
    comment_id INT NOT NULL PRIMARY KEY,
    user_id INT NOT NULL,
    post_id INT NOT NULL,
    FOREIGN KEY (comment_id) REFERENCES COMMENT(comment_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (post_id) REFERENCES POST(post_id) ON DELETE CASCADE ON UPDATE CASCADE
);

DROP TABLE IF EXISTS FOLLOWS;
CREATE TABLE FOLLOWS (
    follower_id INT NOT NULL ,
    following_id INT NOT NULL,
    FOREIGN KEY (follower_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (following_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(follower_id,following_id)
);

DROP TABLE IF EXISTS MAKES_GENERAL_REACT;
CREATE TABLE MAKES_GENERAL_REACT (
    user_id INT NOT NULL ,
    post_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (post_id) REFERENCES POST(post_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,post_id),
    reacted_type ENUM('Like', 'Haha', 'Heart', 'Angry', 'Wow', 'Dislike')
);

DROP TABLE IF EXISTS LIKES;
CREATE TABLE LIKES (
    user_id INT NOT NULL ,
    page_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (page_id) REFERENCES PAGE(page_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,page_id)
);

DROP TABLE IF EXISTS BELONGS_TO;
CREATE TABLE BELONGS_TO (
    user_id INT NOT NULL ,
    group_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (group_id) REFERENCES social_media.GROUP(group_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,group_id)
);

DROP TABLE IF EXISTS IS_ADMIN;
CREATE TABLE IS_ADMIN (
    user_id INT NOT NULL ,
    group_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (group_id) REFERENCES social_media.GROUP(group_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,group_id)
);

DROP TABLE IF EXISTS IS_MODERATOR;
CREATE TABLE IS_MODERATOR (
    user_id INT NOT NULL ,
    group_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (group_id) REFERENCES social_media.GROUP(group_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,group_id)
);

DROP TABLE IF EXISTS MAKES_A_REACT;
CREATE TABLE MAKES_A_REACT (
    user_id INT NOT NULL ,
    comment_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (comment_id) REFERENCES COMMENT(comment_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,comment_id),
    reacted_type ENUM('Like', 'Haha', 'Heart', 'Angry', 'Wow', 'Dislike')
);

DROP TABLE IF EXISTS MENTIONS;
CREATE TABLE MENTIONS (
    mentioner_id INT NOT NULL ,
    mentionee_id INT NOT NULL,
    comment_id INT NOT NULL,
    FOREIGN KEY (mentioner_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (mentionee_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (comment_id) REFERENCES COMMENT(comment_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(comment_id,mentioner_id,mentionee_id)
);

DROP TABLE IF EXISTS SENDS_SPECIFIC;
CREATE TABLE SENDS_SPECIFIC (
    sender_id INT NOT NULL ,
    receiver_id INT NOT NULL,
    message_id INT NOT NULL,
    FOREIGN KEY (sender_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (receiver_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (message_id) REFERENCES MESSAGE(message_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(message_id)
);

DROP TABLE IF EXISTS SENDS_GENERAL;
CREATE TABLE SENDS_GENERAL (
    sender_id INT NOT NULL ,
    group_id INT NOT NULL,
    message_id INT NOT NULL,
    FOREIGN KEY (sender_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (group_id) REFERENCES social_media.GROUP(group_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (message_id) REFERENCES MESSAGE(message_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(message_id)
);

DROP TABLE IF EXISTS RESPONDS;
CREATE TABLE RESPONDS (
    reacter_id INT NOT NULL ,
    story_id INT NOT NULL,
    FOREIGN KEY (reacter_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (story_id) REFERENCES STORIES(story_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(reacter_id,story_id),
    reacted_type ENUM('Like', 'Haha', 'Heart', 'Angry', 'Wow', 'Dislike')
);

DROP TABLE IF EXISTS SHARES;
CREATE TABLE SHARES (
    user_id INT NOT NULL ,
    group_id INT NOT NULL,
    post_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (group_id) REFERENCES social_media.GROUP(group_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (post_id) REFERENCES POST(post_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(post_id)
);

DROP TABLE IF EXISTS IS_TAGGED;
CREATE TABLE IS_TAGGED (
    user_id INT NOT NULL ,
    post_id INT NOT NULL,
    FOREIGN KEY (user_id) REFERENCES USER(user_id) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (post_id) REFERENCES POST(post_id) ON DELETE CASCADE ON UPDATE CASCADE,
    PRIMARY KEY(user_id,post_id)
);

